# Jing-

./: .gitignore  API_REFERENCE.md  FRONTEND_OPTIMIZATION_REPORT.md  README.md  UI_GLASSMOPHISM_OPTIMIZATION.md  start.bat  start.sh  start_backend.bat  start_backend.sh  工作日志.md
backend/: .coverage  .env.example  BACKEND_OPTIMIZATION_REPORT.md  alembic.ini  coverage.xml  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: d8f3ae802d7c_initial_create_all_tables.py  p0_003_add_composite_indexes_and_hypertables.py
backend/app/: __init__.py  main.py  tasks.py
backend/app/adapters/: __init__.py  base.py  cache.py  exchanges.py
backend/app/ai/: __init__.py
backend/app/api/: __init__.py  admin.py  ai.py  auth.py  backtest.py  data.py  notifications.py  risk.py  simulation.py  strategies.py  trading.py  users.py
backend/app/core/: config.py  database.py  deps.py  logging.py  middleware.py  monitoring.py  security.py
backend/app/engine/: __init__.py  backtest.py  interpreter.py
backend/app/engine/simulation/: __init__.py  engine.py
backend/app/execution/: __init__.py  executor.py  idempotency.py  orderbook_cache.py  pipeline.py  tracker.py
backend/app/models/: __init__.py  backtest.py  base.py  market_data.py  notification.py  risk.py  trading.py  user.py
backend/app/notification/: __init__.py  dispatcher.py
backend/app/notification/channels/: __init__.py  base.py  email_sender.py  telegram.py  webhook.py
backend/app/repositories/: __init__.py  strategy.py
backend/app/risk/: __init__.py
backend/app/schemas/: __init__.py  backtest.py  base.py  strategy.py
backend/app/services/: __init__.py  ai_service.py  apikey_service.py  auth.py  backtest.py  market_data.py  notification_service.py  redis_cache.py  risk.py  simulation.py  strategy.py  strategy_codegen.py  strategy_validator.py  template_seeder.py  trading_service.py
backend/app/ws/: __init__.py  broadcaster.py  event_emitter.py  handlers.py  manager.py
backend/tests/: __init__.py  conftest.py  test_adapters.py  test_api.py  test_auth.py  test_execution.py  test_monitoring.py  test_notification.py  test_risk.py  test_schemas.py  test_services.py  test_strategies.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.prod  docker-compose.prod.yml  (+1 more)
(+127 files in other folders)
